--- a/src/style/telegram.scss
+++ b/src/style/telegram.scss
@@ -393,14 +393,21 @@
         & .profile {
             background-color: var(--tg-contact-list-item-bg-color);
         }
+        // 群通知与好友通知
+        & .sys-notify {
+            background-color: var(--tg-contact-list-item-bg-color);
+            & .viewport-list__inner {
+                background-color: var(--tg-contact-list-item-bg-color);
+            }
+        }
     }
 
-    // 分割线的颜色
+    // QQ的联系人面板的分割线有三条，这里将全部分割线的颜色先更改成了联系人侧边栏的背景色
     .contact-layout .resize-handler.ew div {
         background-color: var(--tg-contact-list-item-bg-color);
     }
 
-    // 第一条分割线不显示
+    // 再将第一条分割线取消显示，否则会有一条线覆盖在联系人侧边栏上
     .contact-layout .resize-handler.ew div:first-child {
         background-color: transparent !important;
     }
@@ -1684,6 +1691,20 @@
     }
     .q-context-menu-item:has(.q-icon path[d^='M2.14649'], .q-icon use[*|href$='recall_24']) {
         color: var(--tg-context-menu-withdraw-font-color) !important;
+    }
+    // 气泡菜单，改为和TG一样的圆角
+    .q-context-menu .menu-stickers-wrapper .menu-stickers {
+        border-radius: 9999px;
+        .menu-stickers-item {
+            border-radius: 9999px;
+            // hover效果
+            &:hover {
+                transform: scale(1.2);
+                transition: transform 0.2s;
+                background-color: transparent !important;
+                cursor: pointer;
+            }
+        }
     }
 }
 
